--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = m5stack-atom
 framework = arduino
+monitor_speed = 115200
+lib_deps =
+	m5stack/M5Atom@^0.1.3
+	fastled/FastLED@^3.9.15
+	https://github.com/tzapu/WiFiManager.git
+build_flags =
+	-D _DEBUG
